# SimpleWallet

./: Cargo.toml  Dockerfile  README.md
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/base/: base.rs
domain/src/receipt/: mod.rs  receipt.rs
domain/src/transfer/: transfer.rs
domain/src/user/: user.rs
domain/src/wallet/: error.rs  mod.rs  wallet.rs
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/db/: postgres.rs
lib/src/http_client/: client.rs  config.rs  error.rs  mod.rs
lib/src/log/: logging.rs
services/receipt_service/: Cargo.toml
services/transfer_service/: Cargo.toml
services/wallet_service/: Cargo.toml
services/wallet_service/config/: local.env
services/wallet_service/src/: app.rs  main.rs
services/wallet_service/src/domain/: dto.rs
services/wallet_service/src/handler/: health.rs  router.rs  wallet.rs
services/wallet_service/src/repository/db/: postgres.rs
services/wallet_service/src/repository/http/: mod.rs  user_gateway.rs
services/wallet_service/src/usecase/: wallet.rs
