[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
postgres-types = { version = "0.2", features = ["derive","with-chrono-0_4"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }