[package]
name = "lib"
version = "0.1.0"
edition = "2024"

[dependencies]
deadpool-postgres = "0.14"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread","time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-log = "0.2"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.100"
thiserror = "2.0.17"
lazy_static = "1.5.0"
dotenvy = "0.15"
once_cell = "1.18"
deadpool-redis = "0.16"
redis = { version = "0.25", features = ["aio", "tokio-comp"] }
moka = { version = "0.12", features = ["future"] }
async-trait = "0.1.89"  # in-memory async cache